--- a/dm/content/def.tex
+++ b/dm/content/def.tex
@@ -28,6 +28,11 @@
 \raggedright
 \footnotesize
 
+% Set column separation
+% \setlength{\columnseprule}{1pt}
+% \def\columnseprulecolor{\color{blue}}
+
+% TikZ settings for Venn diagrams
 \def\firstcircle{(0,0) circle (1.5cm)}
 \def\secondcircle{(0:2cm) circle (1.5cm)}
 
