--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -282,6 +282,7 @@ Für eine Menge \(A\) bezeichnet die Potenzmenge \( \mathcal{P}(A) \) die Menge 
 \input{content/tuple.tex}
 \input{content/relations.tex}
 \input{content/classification.tex}
+\input{content/functions.tex}
 % \input{content/equivalenceRelation.tex}
 
 \vfill
