--- a/dm/content/relations.tex
+++ b/dm/content/relations.tex
@@ -57,7 +57,7 @@ Sei \(R=(G,A,B)\) eine Relation von \(A\) nach \(B\).
     \end{tikzpicture} 
 \end{itemize}
 
-\subsubsection{Domäne}
+\subsubsection{Domäne und Bild}
 Die Domäne und das Bild einer Relation geben an, welche Elemente der Quell- bzw. Zielmenge tatsächlich in der Relation vorkommen.
 \begin{align*}
   \operatorname{dom}(R)&:=pr_1(G_R)=\{a\in A\mid \exists b\in B(aRb)\}\\
