--- a/dm/content/relations.tex
+++ b/dm/content/relations.tex
@@ -60,7 +60,7 @@ Sei \(R=(G,A,B)\) eine Relation von \(A\) nach \(B\).
 \subsubsection{Domäne und Bild}
 Die Domäne und das Bild einer Relation geben an, welche Elemente der Quell- bzw. Zielmenge tatsächlich in der Relation vorkommen.
 \begin{align*}
-  \operatorname{dom}(R)&:=pr_1(G_R)=\{a\in A\mid \exists b\in B(aRb)\}\\
-  \operatorname{im}(R)&:=pr_2(G_R)=\{b\in B\mid \exists a\in A(aRb)\}
+  \operatorname{dom}(R)&:=\operatorname{pr}_1(G_R)=\{a\in A\mid \exists b\in B(aRb)\}\\
+  \operatorname{im}(R)&:=\operatorname{pr}_2(G_R)=\{b\in B\mid \exists a\in A(aRb)\}
 \end{align*}
 Im gerichteten Graphen entsprechen die Elemente der Domäne den Knoten mit ausgehenden Kanten, die des Bildes den Knoten mit eingehenden Kanten.
