--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -283,7 +283,7 @@ Für eine Menge \(A\) bezeichnet die Potenzmenge \( \mathcal{P}(A) \) die Menge 
 \input{content/relations.tex}
 \input{content/classification.tex}
 \input{content/functions.tex}
-% \input{content/equivalenceRelation.tex}
+\input{content/equivalenceRelation.tex}
 
 \vfill
 
