--- a/dm/cheatsheet.tex
+++ b/dm/cheatsheet.tex
@@ -11,6 +11,7 @@
 \usepackage{pgfplots}
 \usepgfplotslibrary{fillbetween}
 \usepackage[ngerman]{babel}
+\usepackage{faktor}
 
 
 
@@ -284,6 +285,7 @@ Für eine Menge \(A\) bezeichnet die Potenzmenge \( \mathcal{P}(A) \) die Menge 
 \input{content/classification.tex}
 \input{content/functions.tex}
 \input{content/equivalenceRelation.tex}
+\input{content/halbordnungen.tex}
 
 \vfill
 
