--- a/dm/content/classification.tex
+++ b/dm/content/classification.tex
@@ -77,7 +77,7 @@ Für eine Relation $R = (G, A, B)$ ist die \emph{inverse Relation} definiert dur
 \[
 R^{-1} = (G', B, A), \quad G' := \{ (y,x) \mid (x,y) \in G \}.
 \]
-Eigenschaften:
+\textbf{Eigenschaften:}  
 \begin{itemize}
     \item $(R^{-1})^{-1} = R$
     \item $R$ ist linksvollständig $\Leftrightarrow R^{-1}$ ist rechtsvollständig
