--- a/dm/content/equivalenceRelation.tex
+++ b/dm/content/equivalenceRelation.tex
@@ -25,7 +25,7 @@ Für $a\in A$ ist die \emph{Äquivalenzklasse}
 \[
 [a]_\sim := \{x\in A \mid x\sim a\}.
 \]
-Die Menge aller Äquivalenzklassen heisst \emph{Faktormenge} $A\diagup{\sim} := \{[a]_\sim \mid a\in A\}$.
+Die Menge aller Äquivalenzklassen heisst \emph{Faktormenge} $\faktor{A}{\sim} := \{[a]_\sim \mid a\in A\}$.
 Jedes Element einer Äquivalenzklasse ist ein \emph{Repräsentant} dieser Klasse.
 
 \subsection{Wichtige Eigenschaften}
@@ -63,7 +63,7 @@ Die \(A_i\) nennt man auch \emph{Blöcke} der Partition.
 \end{itemize}
 
 \subsubsection{Induzierte Partition}
-Ist \(\sim\) eine Äquivalenzrelation auf \(A\), so sind die Äquivalenzklassen \([a]_\sim\) die Blöcke der Partition \(A\diagup{\sim}\).
+Ist \(\sim\) eine Äquivalenzrelation auf \(A\), so sind die Äquivalenzklassen \([a]_\sim\) die Blöcke der Partition \(\faktor{A}{\sim}\).
 Insbesondere sind die Klassen nichtleer und paarweise disjunkt.
 
 \subsubsection{Induzierte Äquivalenzrelation}
@@ -71,10 +71,10 @@ Ist \(P=\{A_i\}_{i\in I}\) eine Partition von \(A\), definiert
 \[
 a\sim b \quad:\Leftrightarrow\quad \exists i\in I\; (a\in A_i \wedge b\in A_i)
 \]
-eine Äquivalenzrelation auf \(A\) mit Quotientenmenge \(A\diagup{\sim} = P\).
+eine Äquivalenzrelation auf \(A\) mit Quotientenmenge \(\faktor{A}{\sim} = P\).
 
 \subsubsection{Äquivalenzrelationen und Funktionen}
-Eine Relation \(\sim\) auf \(A\) ist genau dann eine Äquivalenzrelation, wenn es eine Menge \(B\) und eine Abbildung \(f\colon A\to B\) gibt mit
+Eine Relation \(\sim\) auf \(A\) ist genau dann eine Äquivalenzrelation, wenn es eine Menge \(B\) und eine Abbildung \(f\colon A\to B\) gibt, mit der Eigenschaften:
 \[
 x\sim y \quad\Leftrightarrow\quad f(x)=f(y).
 \]
