--- a/dm/content/functions.tex
+++ b/dm/content/functions.tex
@@ -40,6 +40,7 @@ Eine Funktion $f : A \to B$ ist \emph{surjektiv}, falls die Relation \emph{links
 \[
 \operatorname{im}(f) = B
 \]
+Jedes Element in \(B\) wird von mindestens einem Element in \(A\) erreicht.\\
 Notation: \(f:A \twoheadrightarrow B\)
 
 \subsubsection{Bijektivität}
@@ -47,6 +48,7 @@ Eine Funktion $f : A \to B$ ist \emph{bijektiv}, wenn sie sowohl injektiv als au
 \[
 f^{-1} : B \to A.
 \]
+J
 Notation: \(f : A \rightleftharpoons B\)
 
 
