--- a/an1/cheatsheet.tex
+++ b/an1/cheatsheet.tex
@@ -4,10 +4,12 @@
 \usepackage{ifthen}
 \usepackage[landscape, a4paper, top=3mm, left=3mm, right=3mm, bottom=3mm]{geometry}
 \usepackage{hyperref}
-\usepackage{amsmath, amssymb}
+\usepackage{amsmath,amssymb,amsfonts}
 \usepackage{enumitem}
 \usepackage{tikz}
 \usepackage{pgfplots}
+\usepgfplotslibrary{fillbetween}
+\usepackage{polynom}
 
 \begin{document}
 \include{content/def}
@@ -22,6 +24,9 @@
 \input{content/functions.tex}
 \input{content/polynom.tex}
 \input{content/derivatives.tex}
+\input{content/integrals.tex}
+\input{content/series.tex}
+\input{content/limits.tex}
 
 \vfill
 
